# linutils

./: Cargo.toml  README.md  install-fedora.sh  install.sh  start.sh  utils.txt  wget-log
apps/: discord.sh  docker.sh  firefox-backup-restore.sh  webeep.sh
apps-settings/: backup.sh
common/: firefox-backup.sh  shell.sh  time.sh
debian/: coding.sh  docker.sh  install.sh
fedora/: coding.sh  docker.sh  install.sh  shell.sh
src/: config.rs  config.toml  main.rs  processing.rs  state.rs  tui.rs
src/commands/: bad-test.sh  test.sh  test2.sh
src/commands/_tests/: test.sh
src/commands/fedora/: alacritty.sh  discord.sh  docker.sh  firefox_backup.sh  hyprland.sh  install.sh  kitty.sh  lazygit.sh  neovim.sh  setup.sh  webeep-sync.sh  zsh.sh
src/commands/ubuntu/: README.md  alacritty.sh  coding.sh  discord.sh  docker.sh  firefox_backup_restore.sh  golang.sh  install.sh  java.sh  kitty.sh  lazygit.sh  nala.sh  neovim.sh  nerdfont.sh  setup.sh  shell.sh  webeep-sync.sh  webeep.sh  zsh.sh
src/utils/: .zshrc  alacritty.toml  color_theme.dconf  kitty.conf  lazygit.yml  matteleo.zsh-theme
src/utils/hypr/: hyprland.conf
src/utils/waybar/: config.jsonc  style.css
tools/: .zshrc  alacritty.toml  color_theme.dconf  firefox_backup.sh  firefox_backup_restore.sh  nerdfont.sh  shell.sh  time.sh
ubuntu/: README.md  coding.sh  docker.sh  install.sh  shell.sh
ubuntu-setup/: coding.sh  install.sh
ubuntu/apps/: discord.sh  docker.sh  firefox-backup-restore.sh  firefox_backup.sh  webeep.sh
